ipc/parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | Command SEMI toplevel

   3  Command : Prop

   4  Prop : Prop ARROW Prop
   5       | AppProp

   6  AppProp : AppProp AND AppProp
   7          | AppProp OR AppProp
   8          | AProp

   9  AProp : LPAREN Prop RPAREN
  10        | NOT AProp
  11        | UCID
  12        | LCID
  13        | BOT
  14        | TOP

  15  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (15)

	NOT  shift 3
	BOT  shift 4
	TOP  shift 5
	LPAREN  shift 6
	UCID  shift 7
	LCID  shift 8
	EOF  shift 9
	.  error

	toplevel  goto 10
	Command  goto 11
	Prop  goto 12
	AppProp  goto 13
	AProp  goto 14


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	AProp : NOT . AProp  (10)

	NOT  shift 3
	BOT  shift 4
	TOP  shift 5
	LPAREN  shift 6
	UCID  shift 7
	LCID  shift 8
	.  error

	AProp  goto 15


state 4
	AProp : BOT .  (13)

	.  reduce 13


state 5
	AProp : TOP .  (14)

	.  reduce 14


state 6
	AProp : LPAREN . Prop RPAREN  (9)

	NOT  shift 3
	BOT  shift 4
	TOP  shift 5
	LPAREN  shift 6
	UCID  shift 7
	LCID  shift 8
	.  error

	Prop  goto 16
	AppProp  goto 13
	AProp  goto 14


state 7
	AProp : UCID .  (11)

	.  reduce 11


state 8
	AProp : LCID .  (12)

	.  reduce 12


state 9
	toplevel : EOF .  (1)

	.  reduce 1


state 10
	%entry% : '\001' toplevel .  (15)

	.  reduce 15


state 11
	toplevel : Command . SEMI toplevel  (2)

	SEMI  shift 17
	.  error


state 12
	Command : Prop .  (3)
	Prop : Prop . ARROW Prop  (4)

	ARROW  shift 18
	SEMI  reduce 3


state 13
	Prop : AppProp .  (5)
	AppProp : AppProp . AND AppProp  (6)
	AppProp : AppProp . OR AppProp  (7)

	AND  shift 19
	OR  shift 20
	ARROW  reduce 5
	SEMI  reduce 5
	RPAREN  reduce 5


state 14
	AppProp : AProp .  (8)

	.  reduce 8


state 15
	AProp : NOT AProp .  (10)

	.  reduce 10


state 16
	Prop : Prop . ARROW Prop  (4)
	AProp : LPAREN Prop . RPAREN  (9)

	ARROW  shift 18
	RPAREN  shift 21
	.  error


state 17
	toplevel : Command SEMI . toplevel  (2)

	NOT  shift 3
	BOT  shift 4
	TOP  shift 5
	LPAREN  shift 6
	UCID  shift 7
	LCID  shift 8
	EOF  shift 9
	.  error

	toplevel  goto 22
	Command  goto 11
	Prop  goto 12
	AppProp  goto 13
	AProp  goto 14


state 18
	Prop : Prop ARROW . Prop  (4)

	NOT  shift 3
	BOT  shift 4
	TOP  shift 5
	LPAREN  shift 6
	UCID  shift 7
	LCID  shift 8
	.  error

	Prop  goto 23
	AppProp  goto 13
	AProp  goto 14


state 19
	AppProp : AppProp AND . AppProp  (6)

	NOT  shift 3
	BOT  shift 4
	TOP  shift 5
	LPAREN  shift 6
	UCID  shift 7
	LCID  shift 8
	.  error

	AppProp  goto 24
	AProp  goto 14


state 20
	AppProp : AppProp OR . AppProp  (7)

	NOT  shift 3
	BOT  shift 4
	TOP  shift 5
	LPAREN  shift 6
	UCID  shift 7
	LCID  shift 8
	.  error

	AppProp  goto 25
	AProp  goto 14


state 21
	AProp : LPAREN Prop RPAREN .  (9)

	.  reduce 9


state 22
	toplevel : Command SEMI toplevel .  (2)

	.  reduce 2


23: shift/reduce conflict (shift 18, reduce 4) on ARROW
state 23
	Prop : Prop . ARROW Prop  (4)
	Prop : Prop ARROW Prop .  (4)

	ARROW  shift 18
	SEMI  reduce 4
	RPAREN  reduce 4


24: shift/reduce conflict (shift 19, reduce 6) on AND
24: shift/reduce conflict (shift 20, reduce 6) on OR
state 24
	AppProp : AppProp . AND AppProp  (6)
	AppProp : AppProp AND AppProp .  (6)
	AppProp : AppProp . OR AppProp  (7)

	AND  shift 19
	OR  shift 20
	ARROW  reduce 6
	SEMI  reduce 6
	RPAREN  reduce 6


25: shift/reduce conflict (shift 19, reduce 7) on AND
25: shift/reduce conflict (shift 20, reduce 7) on OR
state 25
	AppProp : AppProp . AND AppProp  (6)
	AppProp : AppProp . OR AppProp  (7)
	AppProp : AppProp OR AppProp .  (7)

	AND  shift 19
	OR  shift 20
	ARROW  reduce 7
	SEMI  reduce 7
	RPAREN  reduce 7


State 23 contains 1 shift/reduce conflict.
State 24 contains 2 shift/reduce conflicts.
State 25 contains 2 shift/reduce conflicts.


17 terminals, 7 nonterminals
16 grammar rules, 26 states
